# pyHRAExplorer

./: .gitignore  Introduction to Differential Equation Solving with DSolve—Wolfram Language Documentation.htm  LICENSE  README.md  example.py  plot_tests.py  plots_example.py  poincare_tests.py  project_tests.py  project_tests2.py  pyproject.toml  runs_tests.py  setup.py  signal_tests.py  spectral_tests.py  test_spectral.py
Introduction to Differential Equation Solving with DSolve—Wolfram Language Documentation_files/: analytics.js  body.en.js  clipboard.js  css  eucd.min.js  framework.en.css  global.css  global.js  gui.en.css  head.en.js  header.css  icons.css  language-specific.js.en  root-guide.css  special-styles.css  wal.js  walLoad.js
project/: project_class.py
project/tests/: project_tests.py
project/tests/test_files/: .HRAproject  0582a.rea  ALL_results_2023-11-24.csv  LS_spectrum_results2016-06-09.csv  Poincare_results_2023-11-18.csv
signal_properties/: Poincare.py  RR.csv  RRclass  RRclasses.py  my_exceptions.py  plotRR.py  poincare_tests.py  runs.py  runs_tests.py  see_lomb.py~  signal_tests.py  spectral.py  spectral_tests.py  test_runs_2.py
signal_properties/project/: project_class.py
signal_properties/tests/: poincare_tests.py  runs_tests.py  spectral_tests.py
