[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhraexplorer"
version = "1.0"
authors = [
  { name="Jaroslaw Piskorski", email="jaropis@zg.home.pl" },
{ name = "Maria Guzik", email = "myguzik@gmail.com"}]
description = "Package for analysis of HRV (Heart Rate Variability) and HRA (Heart Rate Asymmetry)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
	"numpy",
	"scipy",
	"matplotlib"
]

[project.urls]
Homepage = "https://github.com/jaropis/pyHRAExplorer"